# ngfd-plugin-droid-vibrator

./: 50-droid-vibrator.ini  CMakeLists.txt  README
rpm/: ngfd-plugin-binder-vibrator.spec  ngfd-plugin-droid-vibrator.spec  ngfd-plugin-native-vibrator.spec
src/: binder.c  droid-vibrator.c  hal.c  implementation.h  native.c
